# NeoPlayer

./: .clang-format  CMakeLists.txt  README.md  spdlog.yaml
modules/log/: CMakeLists.txt
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MpvGLWidget.cpp  MpvGLWidget.h  main.cpp
src/import/: log.h
